--- a/src/app.css
+++ b/src/app.css
@@ -167,3 +167,13 @@
 	animation: flicker 0.15s infinite;
 	animation: textShadow 1.6s infinite;
 }
+
+@layer base {
+	@font-face {
+		font-family: "FiraCode Nerd Font Complete";
+		src: local('FiraCode Nerd Font Complete'),
+			url('fonts/Fira Code Bold Nerd Font Complete.ttf') format('truetype');
+		font-stretch: normal;
+    font-style: normal;
+	}
+}
