--- a/src/app.css
+++ b/src/app.css
@@ -172,7 +172,7 @@
 	@font-face {
 		font-family: 'FiraCode Nerd Font Complete';
 		src: local('FiraCode Nerd Font Complete'),
-			url('fonts/Fira Code Bold Nerd Font Complete.ttf') format('truetype');
+			url('/fonts/Fira Code Bold Nerd Font Complete.ttf') format('truetype');
 		font-stretch: normal;
 		font-style: normal;
 	}
