--- a/src/app.postcss
+++ b/src/app.postcss
@@ -1,3 +1,5 @@
+/* Write your global styles here, in PostCSS syntax */
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -159,13 +161,13 @@
 	background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%),
 		linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06));
 	background-size: 100% 2px, 3px 100%;
-	animation: flicker 0.15s infinite;
-	animation: textShadow 1.6s infinite;
+	/* animation: flicker 0.15s infinite; */
+	/* animation: textShadow 1.6s infinite; */
 }
 
 .crt-anim {
-	animation: flicker 0.15s infinite;
-	animation: textShadow 1.6s infinite;
+	animation: flicker 1.5s infinite;
+	animation: textShadow 0.6s infinite;
 }
 
 @layer base {
